--- a/HoE/Components/_Imports.razor
+++ b/HoE/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using HoE
 @using HoE.Components
+@using HoE.CoreBusiness
+@using HoE.Plugins.InMemory
+@using HoE.UseCase.PluginInterfaces
