--- a/HoE/Components/Layout/NavMenu.razor
+++ b/HoE/Components/Layout/NavMenu.razor
@@ -19,6 +19,13 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="weather">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Teachers
+            </NavLink>
+        </div>
+
     </nav>
 </div>
 
