dodanie funkcjonalnosci wyszukiwania nauczycieli

--- a/HoE/Components/_Imports.razor
+++ b/HoE/Components/_Imports.razor
@@ -11,3 +11,8 @@
 @using HoE.CoreBusiness
 @using HoE.Plugins.InMemory
 @using HoE.UseCase.PluginInterfaces
+@using HoE.UseCase.Teachers
+@using HoE.UseCase.Teachers.Interfaces
+@using HoE.Components.Controls
+
+
