Add teacher button

--- a/HoE/Components/Controls/TeacherListItemComponent.razor
+++ b/HoE/Components/Controls/TeacherListItemComponent.razor
@@ -3,6 +3,13 @@
     <tr>
         <td>@Teacher.Picture</td>
         <td>@Teacher.Name</td>
+        <td>@Teacher.T_ID</td>
+        <td>
+            <a class="btn btn-light"
+               href="/addteacher/@Teacher.T_ID">
+                Dodaj
+            </a>
+        </td>
         
     </tr>
 }
