--- a/HoE/Components/Pages/Teachers/TeacherList.razor
+++ b/HoE/Components/Pages/Teachers/TeacherList.razor
@@ -13,6 +13,8 @@
 </EditForm>
 
 <TeacherListComponent SearchTeacherFilter="@teacherNameToSearch"></TeacherListComponent>
+<br/>
+<a href="/addteacher" class="btn btn-primary">Dodaj Nauczyciela</a>
 
 @code {
     [SupplyParameterFromForm]
