Dodanie serwisów dla uczniów

--- a/HoE/Components/Controls/TeacherListItemComponent.razor
+++ b/HoE/Components/Controls/TeacherListItemComponent.razor
@@ -6,7 +6,7 @@
         <td>@Teacher.T_ID</td>
         <td>
             <a class="btn btn-danger"
-               href="/addteacher/@Teacher.T_ID">
+               href="/deleteteacher/@Teacher.T_ID">
                 Usuń
             </a>
         </td>
