--- a/HoE/Components/Layout/NavMenu.razor
+++ b/HoE/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">HoE</a>
+        <a class="navbar-brand" href="">Horyzonty edukacji</a>
     </div>
 </div>
 
@@ -14,11 +14,7 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="teachers">
