--- a/HoE/Components/Pages/Teachers/TeacherList.razor
+++ b/HoE/Components/Pages/Teachers/TeacherList.razor
@@ -2,7 +2,7 @@
 @using HoE.Components.Controls.Teachers
 <h3>Lista nauczycieli Horyzontów edukacji</h3>
 <i class="bi bi-webcam"></i>
-<EditForm Model="teacherNameToSearch" FormName="formSearch">
+<EditForm Model="teacherNameToSearch" FormName="TFormSearch">
     <div class="input-group">
         <InputText
         class="form-control"
