corrected TeacherBookSlot UseCase, and methods in repo

--- a/HoE/Components/Controls/Teachers/TeacherListItemComponent.razor
+++ b/HoE/Components/Controls/Teachers/TeacherListItemComponent.razor
@@ -10,6 +10,12 @@
                 Usuń
             </a>
         </td>
+        <td>
+            <a class="btn btn-dark"
+            href="/addteacheravability/@Teacher.T_ID">
+            Dodaj dostępność
+            </a>
+        </td>
         
     </tr>
 }
