--- a/HoE/Components/Pages/Home.razor
+++ b/HoE/Components/Pages/Home.razor
@@ -4,10 +4,13 @@
 
 <h1>Kim jesteśmy?</h1>
 
-Znajdź swojego idealnego nauczyciela i rozwijaj swoje umiejętności!
-Szukasz skutecznych korepetycji, które pomogą Ci opanować trudny materiał lub przygotować się do egzaminów? Nasza platforma łączy uczniów z doświadczonymi nauczycielami w różnych przedmiotach i na każdym poziomie nauki.
-<br/>
+<main>
+    Znajdź swojego idealnego nauczyciela i rozwijaj swoje umiejętności!
+    Szukasz skutecznych korepetycji, które pomogą Ci opanować trudny materiał lub przygotować się do egzaminów? Nasza platforma łączy uczniów z doświadczonymi nauczycielami w różnych przedmiotach i na każdym poziomie nauki.
+</main>
+<strong>
 Dzięki nam możesz:
+</strong>
 <br />
 1. Wybrać korepetytora dopasowanego do Twoich potrzeb i stylu nauki.
 <br />
