--- a/HoE/Components/_Imports.razor
+++ b/HoE/Components/_Imports.razor
@@ -16,4 +16,5 @@
 @using HoE.Components.Controls
 @using HoE.UseCase.Students
 @using HoE.UseCase.Students.Interfaces
-
+@using HoE.UseCase.TAvaliable
+@using HoE.UseCase.TAvaliable.Interfaces
